# Block-Listener

./: .gitignore  .npmignore  .yarnrc.yml.bak  BLOCK_INDEXER_SUMMARY.md  CHANGELOG.md  CHIA_CONNECTION_DOCUMENTATION.md  CONTRIBUTING.md  Cargo.toml  DNS_DISCOVERY_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  chia-blocks.db  dns-discovery.d.ts  example-block-indexer.js  example-disconnect.js  example-historical-blocks.js  example-sync.js  example-with-discovery.js  example.js  index.d.ts  index.js  package-lock.json  package.json  test.js  test_chia.db  test_chia_fixed.db  tsconfig.json
.github/: CI_OVERVIEW.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: CI.yml  ci.yml  code-quality.yml  dependency-update.yml  release.yml  status-check.yml
.knowledge/: context.md  critical_missing_implementation.md  gaps.md  implementation_audit.md  incomplete.md  proj_index.md  ref_index.md  tasks.md
.knowledge/reference/: architecture_refactor.md  block_parsing.md  clvm_execution.md  missing_generator_execution.md  transaction_generators.md
__test__/: index.test.js  index.test.mjs
chia-blockchain-client/: .eslintrc.js  .gitignore  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
chia-blockchain-client/src/: index.ts
chia-blockchain-client/src/core/: connection.ts
chia-blockchain-client/src/database/: schema.ts
chia-blockchain-client/src/utils/: logger.ts
chia-blockchain-client/tests/unit/database/: repository.test.ts
crate/chia-generator-parser/: Cargo.toml  README.md
crate/chia-generator-parser/examples/: basic_usage.rs  production_test.rs
crate/chia-generator-parser/src/: error.rs  lib.rs  parser.rs  types.rs
crate/dns-discovery/: Cargo.toml  README.md  package-lock.json
crate/dns-discovery/examples/: discover_peers.rs
crate/dns-discovery/src/: lib.rs
crates/block-indexer/: Cargo.toml  README.md
crates/block-indexer/src/: error.rs  events.rs  indexer.rs  lib.rs  migrations.rs  models.rs
crates/chia-listener-core/: Cargo.toml  README.md
crates/chia-listener-core/src/: block_data.rs  error.rs  lib.rs  peer.rs  protocol.rs  tls.rs
crates/database-connector/: .gitignore  Cargo.toml
crates/database-connector/examples/: basic_usage.rs
crates/database-connector/src/: config.rs  connection.rs  error.rs  lib.rs  models.rs  traits.rs
crates/database-connector/tests/: integration_tests.rs
example/: index.js  usage.ts
examples/: basic-connection-test.js  block-parser-example.mjs  block-refusal-test.js  coin-monitor.js  dns-discovery-example.js  example-basic-usage.js  example-coin-spends.ts  example-disconnect.js  example-get-block-by-height.js  example-historical-blocks.js  example-sync.js  example-typed.ts  example-with-discovery.js  failover-demo.js  failover-test.js  historical-coin-monitor.js  optimized-performance-test.js  peer-disconnection-test.js  peer-discovery-performance-test.js  peer-pool-events-example.js  peer-pool-example.js  peer-pool-parallel-demo.js  peer-pool-peak-tracking.js  peer-pool-performance-test.js  port-test.js  quick-performance-test.js  simple-performance-test.js  test-connection-diagnostic.js  test-final.js  test-generator.js  test-peak-height.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: bump-version.js  post-build.js
src/: block_indexer_napi.rs  block_parser_napi.rs  cert_manager.rs  client.rs  database.rs  dns_discovery_napi.rs  error.rs  error_conversion.rs  event_emitter.rs  handshake.rs  index.ts  lib.rs  peer.rs  peer_discovery.rs  peer_pool.rs  peer_pool_napi.rs  protocol.rs  tls.rs  types.rs
src/cache/: manager.ts
src/core/: client.ts  connection.ts
src/database/: repository.ts
src/events/: emitter.ts
src/protocol/: messages.ts  serialization.ts  types.ts
tests/: setup.ts
tests/unit/cache/: manager.test.ts
tests/unit/events/: emitter.test.ts
tests/unit/protocol/: serialization.test.ts
