[workspace]
members = [
    ".",
    "crates/chia-listener-core",
]
resolver = "2"

[package]
name = "chia-block-listener"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core functionality from our reusable crate
chia-listener-core = { path = "crates/chia-listener-core" }

# NAPI-rs for Node.js bindings
napi = { version = "2", features = ["napi9", "tokio_rt", "async"] }
napi-derive = "2"

# Async runtime (needed for NAPI async functions)
tokio = { version = "1", features = ["full"] }

# Serialization for NAPI
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
