[package]
name = "chia-block-listener"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-rs for Node.js bindings
napi = { version = "2", features = ["napi9", "tokio_rt", "async"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Chia-related dependencies
chia-protocol = "0.26"
chia-traits = "0.26"
chia-ssl = "0.26"

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = { version = "0.2", features = ["vendored"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
dirs = "5"

# Local crates
chia-generator-parser = { path = "./crate/chia-generator-parser" }
dns-discovery = { path = "./crate/dns-discovery" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
