[package]
name = "block-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database connectivity
database-connector = { path = "../database-connector" }

# SQLx for direct SQL operations
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Event system
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
