[package]
name = "chia-listener-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for Chia blockchain listening"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Chia-related dependencies
chia-protocol = "0.26"
chia-traits = "0.26"
chia-bls = "0.26"
chia-ssl = "0.26"
clvmr = "0.8"

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
once_cell = "1"
sha2 = "0.10"
dirs = "5"
rand = "0.8"