[package]
name = "database-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Configuration
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"